--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,10 @@
 
 /* Removed invalid @custom-variant rule */
 
+html {
+  color-scheme: light dark;
+}
+
 
 :root {
   --color-background: var(--background);
@@ -47,7 +51,7 @@
 
 :root {
   --radius: 0.625rem;
-  --background: oklch(1 0 0 / 1);
+  --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
@@ -72,8 +76,8 @@
   --chart-5: oklch(0.769 0.188 70.08);
   --sidebar: oklch(0.985 0 0);
   --sidebar-foreground: oklch(0.145 0 0);
-  --sidebar-primary: oklch(0.205 0 0);
-  --sidebar-primary-foreground: oklch(0.985 0 0);
+  --sidebar-primary: oklch(0.95 0 0);
+  --sidebar-foreground: oklch(0.145 0 0);
   --sidebar-accent: oklch(0.97 0 0);
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
@@ -118,7 +122,7 @@
 }
 
 .dark {
-  --background: oklch(0.145 0 0 / 1);
+  --background: oklch(0.145 0 0);
   --secondary: oklch(95% 0 240);
   --secondary-foreground: oklch(0.985 0 0);
   --foreground: oklch(0.985 0 0);
